[package]
name = "rust-obfuscator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "2.0", features = ["full", "visit-mut"] }
quote = "1.0"
proc-macro2 = "1.0"
rand = "0.8.0"
regex = "1.5.4"
labyrinth = { path = "../labyrinth" }