[package]
name = "cryptify"
version = "3.0.0"
edition = "2021"
authors = ["Pranav Dronavalli <dronavallipranav@gmail.com>"]
description = "A procedural macro library to obfuscate Rust code. Provides compile-time string encryption and random flow obfuscation."
license = "MIT"
repository = "https://github.com/dronavallipranav/rust-obfuscator/tree/main/labyrinth_macros"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
labyrinth_macros = "3.0.0"