[package]
name = "labyrinth_macros"
version = "0.1.0"
authors = ["Pranav Dronavalli <dronavallipranav@gmail.com>"]
description = "A procedural macro crate for the labyrinth super crate. provides compiletime string and flow obfuscation"
license = "MIT"
repository = "https://github.com/dronavallipranav/rust-obfuscator/tree/main/labyrinth_macros"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full", "visit-mut"] }
quote = "1.0"
proc-macro2 = "1.0"
rand = "0.8.0"