[package]
name = "labyrinth_macros"
version = "3.0.0"
edition = "2021"
authors = ["Pranav Dronavalli <dronavallipranav@gmail.com>"]
description = "A procedural macro crate for the cryptify crate meant to provide obfuscation through compile time string encryption. not meant to be used standalone"
license = "MIT"
repository = "https://github.com/dronavallipranav/rust-obfuscator/tree/main/labyrinth_macros"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full", "visit-mut"] }
quote = "1.0"
proc-macro2 = "1.0"
rand = "0.8.0"